--- a/pages/10135.html
+++ b/pages/10135.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8915/#Item_43" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8915/#Item_53" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,10 @@ margin-left: 0em;
 
 <h4 id="cohomology">Cohomology</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></strong></p><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cocycle">cocycle</a>, <a class="existingWikiWord" href="/nlab/show/coboundary">coboundary</a>, <a class="existingWikiWord" href="/nlab/show/coefficient">coefficient</a></p>
 </li>
@@ -365,7 +368,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/obstruction">obstruction</a></p>
 </li>
-</ul><h3 id="special_and_general_types">Special and general types</h3><ul>
+</ul>
+
+<h3 id="special_and_general_types">Special and general types</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cochain+cohomology">cochain cohomology</a></p>
 </li>
@@ -519,7 +526,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Gerstenhaber-Schack+cohomology">bialgebra cohomology</a></p>
 </li>
-</ul><h3 id="special_notions">Special notions</h3><ul>
+</ul>
+
+<h3 id="special_notions">Special notions</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/%3Fech+cohomology">?ech cohomology</a></p>
 </li>
@@ -527,7 +538,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/hypercohomology">hypercohomology</a></p>
 </li>
-</ul><h3 id="variants">Variants</h3><ul>
+</ul>
+
+<h3 id="variants">Variants</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a></p>
 
@@ -609,7 +624,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/relative+cohomology">relative cohomology</a></p>
 </li>
-</ul><h3 id="extra_structure">Extra structure</h3><ul>
+</ul>
+
+<h3 id="extra_structure">Extra structure</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Hodge+structure">Hodge structure</a></p>
 </li>
@@ -617,7 +636,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/orientation">orientation</a>, <a class="existingWikiWord" href="/nlab/show/orientation+in+generalized+cohomology">in generalized cohomology</a></p>
 </li>
-</ul><h3 id="operations">Operations</h3><ul>
+</ul>
+
+<h3 id="operations">Operations</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cohomology+operations">cohomology operations</a></p>
 </li>
@@ -637,7 +660,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cohomology+localization">cohomology localization</a></p>
 </li>
-</ul><h3 id="theorems">Theorems</h3><ul>
+</ul>
+
+<h3 id="theorems">Theorems</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/universal+coefficient+theorem">universal coefficient theorem</a></p>
 </li>
@@ -667,15 +694,21 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Eckmann-Hilton+duality">Eckmann-Hilton-Fuks duality</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/cohomology+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="higher_geometry">Higher geometry</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a></strong> / <strong><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></strong></p><h2 id="ingredients">Ingredients</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a></strong> / <strong><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></strong></p>
+
+<h2 id="ingredients">Ingredients</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+topos+theory">higher topos theory</a></p>
 </li>
@@ -683,7 +716,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></p>
 </li>
-</ul><h2 id="concepts">Concepts</h2><ul>
+</ul>
+
+<h2 id="concepts">Concepts</h2>
+
+<ul>
 <li>
 <p><strong>geometric <a class="existingWikiWord" href="/nlab/show/big+and+little+toposes">little</a> <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-topos">(∞,1)-topos</a>es</strong></p>
 
@@ -717,7 +754,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/geometric+%E2%88%9E-stacks">geometric ∞-stacks</a></li>
 </ul>
 </li>
-</ul><h2 id="constructions">Constructions</h2><ul>
+</ul>
+
+<h2 id="constructions">Constructions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/loop+space+object">loop space object</a>, <a class="existingWikiWord" href="/nlab/show/free+loop+space+object">free loop space object</a></p>
 </li>
@@ -725,7 +766,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/fundamental+%E2%88%9E-groupoid+in+a+locally+%E2%88%9E-connected+%28%E2%88%9E%2C1%29-topos">fundamental ∞-groupoid in a locally ∞-connected (∞,1)-topos</a> / <a class="existingWikiWord" href="/nlab/show/fundamental+%E2%88%9E-groupoid+of+a+locally+%E2%88%9E-connected+%28%E2%88%9E%2C1%29-topos">of a locally ∞-connected (∞,1)-topos</a></p>
 </li>
-</ul><h2 id="examples">Examples</h2><ul>
+</ul>
+
+<h2 id="examples">Examples</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/derived+algebraic+geometry">derived algebraic geometry</a></p>
 
@@ -785,7 +830,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+Cartan+geometry">higher Cartan geometry</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Isbell+duality">Isbell duality</a></p>
 </li>
@@ -797,11 +846,12 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Tannaka+duality+for+geometric+stacks">Tannaka duality for geometric stacks</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/higher+geometry+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -1496,7 +1546,7 @@ margin-left: 0em;
 
 <p><strong>(<a href="#Rezk14">Rezk 14</a>)</strong></p>
 
-<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle mathvariant="bold"><mi>H</mi></mstyle></mrow><annotation encoding="application/x-tex">\mathbf{H}</annotation></semantics></math> an <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-topos">(∞,1)-topos</a>, with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub><mo>≔</mo><msub><mi>Sh</mi> <mn>∞</mn></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>Singularities</mi><mo>,</mo><mstyle mathvariant="bold"><mrow></mrow></mstyle><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">\mathbf{H}_{sing} \coloneqq Sh_\infty\big( Singularities, \mathbf{}\big)</annotation></semantics></math> its <a class="existingWikiWord" href="/nlab/show/global+equivariant+homotopy+theory">global equivariant homotopy theory</a> according to Prop. <a class="maruku-ref" href="#CohesionOfGlobalEquivariantHomotopyTheory"></a>, there is an <a class="existingWikiWord" href="/nlab/show/equivalence+of+%28%E2%88%9E%2C1%29-categories">equivalence of (∞,1)-categories</a></p>
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mstyle mathvariant="bold"><mi>H</mi></mstyle></mrow><annotation encoding="application/x-tex">\mathbf{H}</annotation></semantics></math> an <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-topos">(∞,1)-topos</a>, with <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub><mo>≔</mo><msub><mi>Sh</mi> <mn>∞</mn></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>Singularities</mi><mo>,</mo><mstyle mathvariant="bold"><mi>H</mi></mstyle><mo maxsize="1.2em" minsize="1.2em">)</mo></mrow><annotation encoding="application/x-tex">\mathbf{H}_{sing} \coloneqq Sh_\infty\big( Singularities, \mathbf{H}\big)</annotation></semantics></math> its <a class="existingWikiWord" href="/nlab/show/global+equivariant+homotopy+theory">global equivariant homotopy theory</a> according to Prop. <a class="maruku-ref" href="#CohesionOfGlobalEquivariantHomotopyTheory"></a>, there is an <a class="existingWikiWord" href="/nlab/show/equivalence+of+%28%E2%88%9E%2C1%29-categories">equivalence of (∞,1)-categories</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><msub><mi>Sh</mi> <mn>∞</mn></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>GlobalOrbits</mi><mo>,</mo><mstyle mathvariant="bold"><mi>H</mi></mstyle><mo maxsize="1.2em" minsize="1.2em">)</mo></mtd> <mtd><mover><mo>⟶</mo><mo>≃</mo></mover></mtd> <mtd><msub><mrow><mo>(</mo><msub><mi>Sh</mi> <mn>∞</mn></msub><mo maxsize="1.2em" minsize="1.2em">(</mo><mi>Singularities</mi><mo>,</mo><mstyle mathvariant="bold"><mi>H</mi></mstyle><msub><mo maxsize="1.2em" minsize="1.2em">)</mo> <mrow><mo stretchy="false">/</mo><mi>𝒩</mi></mrow></msub><mo>)</mo></mrow> <mtext>singfaith</mtext></msub><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><msub><mrow><mo>(</mo><msub><mrow><mo>(</mo><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub><mo>)</mo></mrow> <mrow><mo stretchy="false">/</mo><mi>𝒩</mi></mrow></msub><mo>)</mo></mrow> <mi>singfaith</mi></msub></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
   \array{
     Sh_\infty\big( GlobalOrbits, \mathbf{H}\big)
@@ -1513,7 +1563,7 @@ margin-left: 0em;
   }
 
 </annotation></semantics></math></div>
-<p>between the <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-presheaf+%28%E2%88%9E%2C1%29-category">(∞,1)-presheaf (∞,1)-category</a> on the <a class="existingWikiWord" href="/nlab/show/global+orbit+category">global orbit category</a> according to Def. <a class="maruku-ref" href="#GlobalOrbitCategory"></a> and the <a class="existingWikiWord" href="/nlab/show/full+sub-%28%E2%88%9E%2C1%29-category">full sub-(∞,1)-category</a> of the <a class="existingWikiWord" href="/nlab/show/slice+%28%E2%88%9E%2C1%29-topos">slice (∞,1)-topos</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub></mrow><annotation encoding="application/x-tex">\mathbf{H}_{sing}</annotation></semantics></math> over the normal subgroup classifier <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi></mrow><annotation encoding="application/x-tex">\mathcal{N}</annotation></semantics></math> (Def. <a class="maruku-ref" href="#NormalSubgroupClassifier"></a>) on those morphisms to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi></mrow><annotation encoding="application/x-tex">\mathcal{N}</annotation></semantics></math> whhich are <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Singularities</mi></mrow><annotation encoding="application/x-tex">Singularities</annotation></semantics></math>-faithful according to Def. <a class="maruku-ref" href="#SingularitiesFaithful"></a>.</p>
+<p>between the <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-presheaf+%28%E2%88%9E%2C1%29-category">(∞,1)-presheaf (∞,1)-category</a> on the <a class="existingWikiWord" href="/nlab/show/global+orbit+category">global orbit category</a> according to Def. <a class="maruku-ref" href="#GlobalOrbitCategory"></a> and the <a class="existingWikiWord" href="/nlab/show/full+sub-%28%E2%88%9E%2C1%29-category">full sub-(∞,1)-category</a> of the <a class="existingWikiWord" href="/nlab/show/slice+%28%E2%88%9E%2C1%29-topos">slice (∞,1)-topos</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub></mrow><annotation encoding="application/x-tex">\mathbf{H}_{sing}</annotation></semantics></math> over the normal subgroup classifier <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi></mrow><annotation encoding="application/x-tex">\mathcal{N}</annotation></semantics></math> (Def. <a class="maruku-ref" href="#NormalSubgroupClassifier"></a>) on those morphisms to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi></mrow><annotation encoding="application/x-tex">\mathcal{N}</annotation></semantics></math> which are <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Singularities</mi></mrow><annotation encoding="application/x-tex">Singularities</annotation></semantics></math>-faithful according to Def. <a class="maruku-ref" href="#SingularitiesFaithful"></a>.</p>
 
 <p>Moreover, if <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> is a <a class="existingWikiWord" href="/nlab/show/finite+group">finite group</a> then slicing over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝔹</mi><mi>G</mi></mrow><annotation encoding="application/x-tex">\mathbb{B}G</annotation></semantics></math> this yields an equivalence</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>G</mi></msub><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msub><mrow><mo>(</mo><msub><mrow><mo>(</mo><msub><mstyle mathvariant="bold"><mi>H</mi></mstyle> <mi>sing</mi></msub><mo>)</mo></mrow> <mrow><mo stretchy="false">/</mo><mi>𝔹</mi><mi>G</mi></mrow></msub><mo>)</mo></mrow> <mi>singfaith</mi></msub></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
@@ -1999,14 +2049,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  2, 2018 at 18:24:02.
+  Last revised on December 19, 2018 at 07:10:41.
   See the <a href="https://ncatlab.org/nlab/history/orbifold cohomology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orbifold+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold+cohomology/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/orbifold+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orbifold+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold+cohomology/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/orbifold+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orbifold cohomology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
