--- a/pages/393.html
+++ b/pages/393.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9383/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9383/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -816,17 +816,23 @@ margin-left: 0em;
 
 <p><h2 id='section_Definition'>Definition</h2></p>
 
-<p>A <em>homotopical category</em> is a <a class="existingWikiWord" href="/nlab/show/category+with+weak+equivalences">category with weak equivalences</a> where on top of the 2-out-of-3-property the morphisms satisfy the <strong><a class="existingWikiWord" href="/nlab/show/2-out-of-6-property">2-out-of-6-property</a></strong>:</p>
+<p>A <em>homotopical category</em> is a category with a distinguished class of morphisms (called ‘weak equivalences’) satisfying the following conditions:</p>
 
 <ul>
-<li>If morphisms <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>h</mi><mo>∘</mo><mi>g</mi></mrow><annotation encoding="application/x-tex">h \circ g</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi><mo>∘</mo><mi>f</mi></mrow><annotation encoding="application/x-tex">g \circ f</annotation></semantics></math> are weak equivalences, then so are <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>f</mi></mrow><annotation encoding="application/x-tex">f</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>h</mi></mrow><annotation encoding="application/x-tex">h</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>h</mi><mo>∘</mo><mi>g</mi><mo>∘</mo><mi>f</mi></mrow><annotation encoding="application/x-tex">h \circ g \circ f</annotation></semantics></math>.</li>
+<li>
+<p>Every identity map is a weak equivalence.</p>
+</li>
+
+<li>
+<p>It has the <strong><a class="existingWikiWord" href="/nlab/show/2-out-of-6-property">2-out-of-6-property</a></strong>: if morphisms <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>h</mi><mo>∘</mo><mi>g</mi></mrow><annotation encoding="application/x-tex">h \circ g</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi><mo>∘</mo><mi>f</mi></mrow><annotation encoding="application/x-tex">g \circ f</annotation></semantics></math> are weak equivalences, then so are <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>f</mi></mrow><annotation encoding="application/x-tex">f</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>g</mi></mrow><annotation encoding="application/x-tex">g</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>h</mi></mrow><annotation encoding="application/x-tex">h</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>h</mi><mo>∘</mo><mi>g</mi><mo>∘</mo><mi>f</mi></mrow><annotation encoding="application/x-tex">h \circ g \circ f</annotation></semantics></math>.</p>
+</li>
 </ul>
 
 <p><h2 id='section_Remarks'>Remarks</h2></p>
 
 <ul>
 <li>
-<p>The 2-out-of-6-property implies the <a class="existingWikiWord" href="/nlab/show/2-out-of-3">2-out-of-3</a> property, hence every homotopical category is a <a class="existingWikiWord" href="/nlab/show/category+with+weak+equivalences">category with weak equivalences</a>.</p>
+<p>If the first condition in Def. 2 holds, then the 2-out-of-6-property implies the <a class="existingWikiWord" href="/nlab/show/2-out-of-3">2-out-of-3</a> property, hence every homotopical category is a <a class="existingWikiWord" href="/nlab/show/category+with+weak+equivalences">category with weak equivalences</a>.</p>
 </li>
 
 <li>
@@ -889,14 +895,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 17, 2018 at 02:45:01.
+  Last revised on December 19, 2018 at 09:17:21.
   See the <a href="https://ncatlab.org/nlab/history/homotopical category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/homotopical+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopical+category/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/homotopical+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopical+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/homotopical+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/homotopical+category/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/homotopical+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/homotopical+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/homotopical category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
