--- a/pages/1485.html
+++ b/pages/1485.html
@@ -317,7 +317,14 @@ margin-left: 0em;
 
 <h4 id="manifolds_and_cobordisms">Manifolds and cobordisms</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/manifolds">manifolds</a></strong> and <strong><a class="existingWikiWord" href="/nlab/show/cobordisms">cobordisms</a></strong></p><p><a class="existingWikiWord" href="/nlab/show/cobordism+theory">cobordism theory</a>, <em><a class="existingWikiWord" href="/nlab/show/Introduction+to+Cobordism+and+Complex+Oriented+Cohomology">Introduction</a></em></p><h2 id="definitions">Definitions</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/manifolds">manifolds</a></strong> and <strong><a class="existingWikiWord" href="/nlab/show/cobordisms">cobordisms</a></strong></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/cobordism+theory">cobordism theory</a>, <em><a class="existingWikiWord" href="/nlab/show/Introduction+to+Cobordism+and+Complex+Oriented+Cohomology">Introduction</a></em></p>
+
+<h2 id="definitions">Definitions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/locally+Euclidean+space">locally Euclidean space</a></p>
 
@@ -431,7 +438,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="genera_and_invariants">Genera and invariants</h2><ul>
+</ul>
+
+<h2 id="genera_and_invariants">Genera and invariants</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/signature+genus">signature genus</a>, <a class="existingWikiWord" href="/nlab/show/Kervaire+invariant">Kervaire invariant</a></p>
 </li>
@@ -439,7 +450,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/A-hat+genus">A-hat genus</a>, <a class="existingWikiWord" href="/nlab/show/Witten+genus">Witten genus</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Whitney+embedding+theorem">Whitney embedding theorem</a></p>
 </li>
@@ -473,15 +488,21 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cobordism+hypothesis">cobordism hypothesis</a>-theorem</p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/manifolds+and+cobordisms+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="geometry">Geometry</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a></strong> / <strong><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></strong></p><h2 id="ingredients">Ingredients</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a></strong> / <strong><a class="existingWikiWord" href="/nlab/show/derived+geometry">derived geometry</a></strong></p>
+
+<h2 id="ingredients">Ingredients</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+topos+theory">higher topos theory</a></p>
 </li>
@@ -489,7 +510,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></p>
 </li>
-</ul><h2 id="concepts">Concepts</h2><ul>
+</ul>
+
+<h2 id="concepts">Concepts</h2>
+
+<ul>
 <li>
 <p><strong>geometric <a class="existingWikiWord" href="/nlab/show/big+and+little+toposes">little</a> <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-topos">(∞,1)-topos</a>es</strong></p>
 
@@ -523,7 +548,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/geometric+%E2%88%9E-stacks">geometric ∞-stacks</a></li>
 </ul>
 </li>
-</ul><h2 id="constructions">Constructions</h2><ul>
+</ul>
+
+<h2 id="constructions">Constructions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/loop+space+object">loop space object</a>, <a class="existingWikiWord" href="/nlab/show/free+loop+space+object">free loop space object</a></p>
 </li>
@@ -531,7 +560,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/fundamental+%E2%88%9E-groupoid+in+a+locally+%E2%88%9E-connected+%28%E2%88%9E%2C1%29-topos">fundamental ∞-groupoid in a locally ∞-connected (∞,1)-topos</a> / <a class="existingWikiWord" href="/nlab/show/fundamental+%E2%88%9E-groupoid+of+a+locally+%E2%88%9E-connected+%28%E2%88%9E%2C1%29-topos">of a locally ∞-connected (∞,1)-topos</a></p>
 </li>
-</ul><h2 id="examples">Examples</h2><ul>
+</ul>
+
+<h2 id="examples">Examples</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/derived+algebraic+geometry">derived algebraic geometry</a></p>
 
@@ -591,7 +624,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+Cartan+geometry">higher Cartan geometry</a></p>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Isbell+duality">Isbell duality</a></p>
 </li>
@@ -603,11 +640,12 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Tannaka+duality+for+geometric+stacks">Tannaka duality for geometric stacks</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/higher+geometry+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -683,7 +721,7 @@ margin-left: 0em;
 <div class="num_defn" id="Atlas">
 <h6 id="definition_2">Definition</h6>
 
-<p>A <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<strong>atlas</strong> on a <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>M</mi></mrow><annotation encoding="application/x-tex">M</annotation></semantics></math> is a family of compatible charts <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>ϕ</mi> <mi>α</mi></msub><mo>:</mo><msub><mi>U</mi> <mi>α</mi></msub><mo>→</mo><mi>X</mi><msub><mo stretchy="false">)</mo> <mi>α</mi></msub></mrow><annotation encoding="application/x-tex">(\phi_\alpha: U_\alpha \to X)_\alpha</annotation></semantics></math>, def. <a class="maruku-ref" href="#Chart"></a>, such that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>U</mi> <mi>α</mi></msub><msub><mo stretchy="false">)</mo> <mi>α</mi></msub><msub><mo stretchy="false">)</mo> <mi>α</mi></msub></mrow><annotation encoding="application/x-tex">(U_\alpha)_\alpha)_\alpha</annotation></semantics></math> covers <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>M</mi></mrow><annotation encoding="application/x-tex">M</annotation></semantics></math>. The (restricted) maps <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ϕ</mi> <mrow><mi>α</mi><mi>β</mi></mrow></msub><mo>=</mo><msub><mi>ϕ</mi> <mi>β</mi></msub><mo>∘</mo><msubsup><mi>ϕ</mi> <mi>α</mi> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow></msubsup></mrow><annotation encoding="application/x-tex">\phi_{\alpha \beta} = \phi_\beta \circ \phi_{\alpha}^{-1}</annotation></semantics></math> are called <strong>transition functions</strong> between the charts of the atlas.</p>
+<p>A <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<strong>atlas</strong> on a <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>M</mi></mrow><annotation encoding="application/x-tex">M</annotation></semantics></math> is a family of compatible charts <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>ϕ</mi> <mi>α</mi></msub><mo>:</mo><msub><mi>U</mi> <mi>α</mi></msub><mo>→</mo><mi>X</mi><msub><mo stretchy="false">)</mo> <mi>α</mi></msub></mrow><annotation encoding="application/x-tex">(\phi_\alpha: U_\alpha \to X)_\alpha</annotation></semantics></math>, def. <a class="maruku-ref" href="#Chart"></a>, such that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>U</mi> <mi>α</mi></msub><msub><mo stretchy="false">)</mo> <mi>α</mi></msub></mrow><annotation encoding="application/x-tex">(U_\alpha)_\alpha</annotation></semantics></math> covers <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>M</mi></mrow><annotation encoding="application/x-tex">M</annotation></semantics></math>. The (restricted) maps <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ϕ</mi> <mrow><mi>α</mi><mi>β</mi></mrow></msub><mo>=</mo><msub><mi>ϕ</mi> <mi>β</mi></msub><mo>∘</mo><msubsup><mi>ϕ</mi> <mi>α</mi> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow></msubsup></mrow><annotation encoding="application/x-tex">\phi_{\alpha \beta} = \phi_\beta \circ \phi_{\alpha}^{-1}</annotation></semantics></math> are called <strong>transition functions</strong> between the charts of the atlas.</p>
 </div>
 
 <div class="num_defn">
@@ -881,14 +919,14 @@ X &amp;&amp;&amp;&amp; M &amp;&amp;&amp;&amp; N &amp;&amp;&amp;&amp; Y
 
 <div class="revisedby">
   <p>
-  Last revised on November  4, 2018 at 07:11:57.
+  Last revised on December 20, 2018 at 02:29:49.
   See the <a href="https://ncatlab.org/nlab/history/manifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/manifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/manifold/43" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(43 revisions)</span> | <a href="/nlab/show/diff/manifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/manifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/manifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/manifold/44" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(44 revisions)</span> | <a href="/nlab/show/diff/manifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/manifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/manifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
