--- a/pages/5333.html
+++ b/pages/5333.html
@@ -1767,7 +1767,13 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>Hajime Otsuka, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SO</mi><mo stretchy="false">(</mo><mn>32</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SO(32)</annotation></semantics></math> heterotic line bundle models</em>, (<a href="https://arxiv.org/abs/1801.03684">arXiv:1801.03684</a>)</li>
+<li>
+<p>Hajime Otsuka, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SO</mi><mo stretchy="false">(</mo><mn>32</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SO(32)</annotation></semantics></math> heterotic line bundle models</em>, (<a href="https://arxiv.org/abs/1801.03684">arXiv:1801.03684</a>)</p>
+</li>
+
+<li id="AngelantonjFlorakis18">
+<p>Carlo Angelantonj, Ioannis Florakis, <em>GUT Scale Unification in Heterotic Strings</em> (<a href="https://arxiv.org/abs/1812.06915">arXiv:1812.06915</a>)</p>
+</li>
 </ul>
 
 <h3 id="superspace_formulation_of_heterotic_supergravity">Superspace formulation of Heterotic supergravity</h3>
@@ -1937,14 +1943,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 14, 2018 at 02:41:57.
+  Last revised on December 20, 2018 at 05:23:39.
   See the <a href="https://ncatlab.org/nlab/history/heterotic string theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/heterotic+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/heterotic+string+theory/43" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(43 revisions)</span> | <a href="/nlab/show/diff/heterotic+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/heterotic+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/heterotic+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/heterotic+string+theory/44" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(44 revisions)</span> | <a href="/nlab/show/diff/heterotic+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/heterotic+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/heterotic string theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
