--- a/pages/19999.html
+++ b/pages/19999.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -309,11 +309,20 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
 <blockquote>
-<p>This page is about the notion of poly-morphism introduced by Shinichi Mochizuki. For the concept in computer science see <a class="existingWikiWord" href="/nlab/show/polymorphism">polymorphism</a>. Or see <a class="existingWikiWord" href="/nlab/show/universe+polymorphism">universe polymorphism</a> for the concept in type theory.</p>
+<p>This page is about the notion of poly-morphism introduced by <a class="existingWikiWord" href="/nlab/show/Shinichi+Mochizuki">Shinichi Mochizuki</a>. For the concept in <a class="existingWikiWord" href="/nlab/show/computer+science">computer science</a> see <a class="existingWikiWord" href="/nlab/show/polymorphism">polymorphism</a>. Or see <a class="existingWikiWord" href="/nlab/show/universe+polymorphism">universe polymorphism</a> for the concept in <a class="existingWikiWord" href="/nlab/show/type+theory">type theory</a>.</p>
 </blockquote>
+
+<h1 id="contents">Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#abstract_approach'>Abstract approach</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
 
 <h2 id="idea">Idea</h2>
 
@@ -375,14 +384,14 @@ U\mapsto g\cdot U = \{g\cdot x \in S \mid x\in U\}.
 
 <div class="revisedby">
   <p>
-  Last revised on December 20, 2018 at 00:56:58.
+  Last revised on December 20, 2018 at 06:58:52.
   See the <a href="https://ncatlab.org/nlab/history/poly-morphism" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/poly-morphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/poly-morphism/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/poly-morphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/poly-morphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/poly-morphism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/poly-morphism/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/poly-morphism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/poly-morphism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/poly-morphism/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
