--- a/pages/9175.html
+++ b/pages/9175.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -787,7 +787,13 @@ margin-left: 0em;
 <p>(…)</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Jack+Morava">Jack Morava</a>, <em>Theories of anything</em> (<a href="http://arxiv.org/abs/1202.0684">arXiv:1202.0684</a>)</li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Jack+Morava">Jack Morava</a>, <em>Theories of anything</em> (<a href="http://arxiv.org/abs/1202.0684">arXiv:1202.0684</a>)</p>
+</li>
+
+<li>
+<p><span class="newWikiWord">J. Heinloth<a href="/nlab/new/J.+Heinloth">?</a></span>, <em>Some notes on Differentiable stacks</em>(<a href="https://www.uni-due.de/~hm0002/stacks.pdf">stacks</a>)</p>
+</li>
 </ul>
 </body></html>
 
@@ -795,7 +801,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 20, 2018 at 11:55:39.
+  Last revised on December 20, 2018 at 12:01:05.
   See the <a href="https://ncatlab.org/nlab/history/quotient stack" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
