--- a/pages/232.html
+++ b/pages/232.html
@@ -317,7 +317,13 @@ margin-left: 0em;
 
 <h4 id="category_theory">Category theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></strong></p><h2 id="concepts">Concepts</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></strong></p>
+
+<h2 id="concepts">Concepts</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/category">category</a></p>
 </li>
@@ -333,7 +339,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Cat">Cat</a></p>
 </li>
-</ul><h2 id="universal_constructions">Universal constructions</h2><ul>
+</ul>
+
+<h2 id="universal_constructions">Universal constructions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/universal+construction">universal construction</a></p>
 
@@ -363,7 +373,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="theorems">Theorems</h2><ul>
+</ul>
+
+<h2 id="theorems">Theorems</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Yoneda+lemma">Yoneda lemma</a></p>
 </li>
@@ -407,7 +421,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/relation+between+type+theory+and+category+theory">relation between type theory and category theory</a></p>
 </li>
-</ul><h2 id="extensions">Extensions</h2><ul>
+</ul>
+
+<h2 id="extensions">Extensions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/sheaf+and+topos+theory">sheaf and topos theory</a></p>
 </li>
@@ -419,17 +437,27 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/higher+category+theory">higher category theory</a></p>
 </li>
-</ul><h2 id="applications">Applications</h2><ul>
+</ul>
+
+<h2 id="applications">Applications</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/applications+of+%28higher%29+category+theory">applications of (higher) category theory</a></li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/category+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="enriched_category_theory">Enriched category theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/enriched+category+theory">enriched category theory</a></strong></p><h2 id="background">Background</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/enriched+category+theory">enriched category theory</a></strong></p>
+
+<h2 id="background">Background</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></p>
 </li>
@@ -441,7 +469,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/cosmos">cosmos</a>, <a class="existingWikiWord" href="/nlab/show/multicategory">multicategory</a>, <a class="existingWikiWord" href="/nlab/show/bicategory">bicategory</a>, <a class="existingWikiWord" href="/nlab/show/double+category">double category</a>, <a class="existingWikiWord" href="/nlab/show/virtual+double+category">virtual double category</a></p>
 </li>
-</ul><h2 id="basic_concepts">Basic concepts</h2><ul>
+</ul>
+
+<h2 id="basic_concepts">Basic concepts</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/enriched+category">enriched category</a></p>
 </li>
@@ -453,7 +485,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/enriched+functor+category">enriched functor category</a></p>
 </li>
-</ul><h2 id="universal_constructions">Universal constructions</h2><ul>
+</ul>
+
+<h2 id="universal_constructions">Universal constructions</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/weighted+limit">weighted limit</a></p>
 </li>
@@ -461,9 +497,17 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/end">end</a>, <a class="existingWikiWord" href="/nlab/show/coend">coend</a></p>
 </li>
-</ul><h2 id="extra_stuff_structure_property">Extra stuff, structure, property</h2><ul>
+</ul>
+
+<h2 id="extra_stuff_structure_property">Extra stuff, structure, property</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/copower">copower</a>ing (tensoring), <a class="existingWikiWord" href="/nlab/show/power">power</a>ing (cotensoring)</li>
-</ul><h3 id="homotopical_enrichment">Homotopical enrichment</h3><ul>
+</ul>
+
+<h3 id="homotopical_enrichment">Homotopical enrichment</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/enriched+homotopical+category">enriched homotopical category</a></p>
 </li>
@@ -475,11 +519,12 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/model+structure+on+homotopical+presheaves">model structure on homotopical presheaves</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/enriched+category+theory+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -716,7 +761,7 @@ p(x) &amp;&amp; \underset{hom(x,z)}{\to} &amp;&amp; p(z)}
 
 <h3 id="lax_monoidal_functors">Lax monoidal functors</h3>
 
-<p>More generally, any (lax) <a class="existingWikiWord" href="/nlab/show/monoidal+functor">monoidal functor</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi><mo>:</mo><mi>K</mi><mo>→</mo><mi>L</mi></mrow><annotation encoding="application/x-tex">F: K \to L</annotation></semantics></math> between monoidal categories can be regarded as a “change of base”. By applying <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi></mrow><annotation encoding="application/x-tex">F</annotation></semantics></math> to its hom-objects, any category enriched over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math> gives rise to one enriched over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math>, and this forms a <a class="existingWikiWord" href="/nlab/show/2-functor">2-functor</a> from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>-Cat to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math>-Cat, and in fact from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>-Prof to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math>-Prof; see <a class="existingWikiWord" href="/nlab/show/profunctor">profunctor</a> and <a class="existingWikiWord" href="/nlab/show/2-category+equipped+with+proarrows">2-category equipped with proarrows</a>.</p>
+<p>More generally, any (lax) <a class="existingWikiWord" href="/nlab/show/monoidal+functor">monoidal functor</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi><mo>:</mo><mi>K</mi><mo>→</mo><mi>L</mi></mrow><annotation encoding="application/x-tex">F: K \to L</annotation></semantics></math> between monoidal categories can be regarded as a “<span class="newWikiWord">change of base<a href="/nlab/new/change+of+enriching+category">?</a></span>”. By applying <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi></mrow><annotation encoding="application/x-tex">F</annotation></semantics></math> to its hom-objects, any category enriched over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math> gives rise to one enriched over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math>, and this forms a <a class="existingWikiWord" href="/nlab/show/2-functor">2-functor</a> from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>-Cat to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math>-Cat, and in fact from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>-Prof to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>L</mi></mrow><annotation encoding="application/x-tex">L</annotation></semantics></math>-Prof; see <a class="existingWikiWord" href="/nlab/show/profunctor">profunctor</a> and <a class="existingWikiWord" href="/nlab/show/2-category+equipped+with+proarrows">2-category equipped with proarrows</a>.</p>
 
 <p>Moreover, this operation is itself functorial from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>MonCat</mi></mrow><annotation encoding="application/x-tex">MonCat</annotation></semantics></math> to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>Cat</mi></mrow><annotation encoding="application/x-tex">2Cat</annotation></semantics></math>. In particular, any <a class="existingWikiWord" href="/nlab/show/monoidal+adjunction">monoidal adjunction</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo>⇄</mo><mi>L</mi></mrow><annotation encoding="application/x-tex">K\rightleftarrows L</annotation></semantics></math> gives rise to a <a class="existingWikiWord" href="/nlab/show/2-adjunction">2-adjunction</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi><mi>Cat</mi><mo>⇄</mo><mi>L</mi><mi>Cat</mi></mrow><annotation encoding="application/x-tex">K Cat\rightleftarrows L Cat</annotation></semantics></math> (and also for profunctors). The adjunction <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Cat</mi><mo>⇄</mo><mi>K</mi><mi>Cat</mi></mrow><annotation encoding="application/x-tex">Cat \rightleftarrows K Cat</annotation></semantics></math> described above is a special case of this arising from the adjunction <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mo>⋅</mo><mi>I</mi><mo>:</mo><mi>Set</mi><mo>⇄</mo><mi>K</mi><mo>:</mo><mi>K</mi><mo stretchy="false">(</mo><mi>I</mi><mo>,</mo><mo lspace="verythinmathspace" rspace="0em">−</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">-\cdot I: Set \rightleftarrows K : K(I,-)</annotation></semantics></math>.</p>
 
@@ -899,14 +944,14 @@ p(x) &amp;&amp; \underset{hom(x,z)}{\to} &amp;&amp; p(z)}
 
 <div class="revisedby">
   <p>
-  Last revised on November 21, 2018 at 03:32:01.
+  Last revised on December 21, 2018 at 12:21:25.
   See the <a href="https://ncatlab.org/nlab/history/enriched category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/enriched+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/enriched+category/87" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(87 revisions)</span> | <a href="/nlab/show/diff/enriched+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/enriched+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/enriched+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/enriched+category/88" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(88 revisions)</span> | <a href="/nlab/show/diff/enriched+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/enriched+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/enriched category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
