--- a/pages/20007.html
+++ b/pages/20007.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9393/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9393/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -405,7 +405,7 @@ margin-left: 0em;
 
 <h2 id="definition">Definition</h2>
 
-<p>Given two <a class="existingWikiWord" href="/nlab/show/monoidal+categories">monoidal categories</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>V</mi> <mn>1</mn></msub><mo>,</mo><msub><mo>⊗</mo> <mn>1</mn></msub><mo>,</mo><msub><mi>I</mi> <mn>1</mn></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(V_1,\otimes_1, I_1)</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>V</mi> <mn>2</mn></msub><mo>,</mo><msub><mo>⊗</mo> <mn>2</mn></msub><mo>,</mo><msub><mi>I</mi> <mn>2</mn></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(V_2, \otimes_2, I_2)</annotation></semantics></math> used for enrichement in <a class="existingWikiWord" href="/nlab/show/enriched+category+theory">enriched category theory</a> (for instance two <a class="existingWikiWord" href="/nlab/show/B%C3%A9nabou+cosmoi">Bénabou cosmoi</a>) a <a class="existingWikiWord" href="/nlab/show/lax+monoidal+functor">lax monoidal functor</a> between them</p>
+<p>Given two <a class="existingWikiWord" href="/nlab/show/monoidal+categories">monoidal categories</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>V</mi> <mn>1</mn></msub><mo>,</mo><msub><mo>⊗</mo> <mn>1</mn></msub><mo>,</mo><msub><mi>I</mi> <mn>1</mn></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(V_1,\otimes_1, I_1)</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>V</mi> <mn>2</mn></msub><mo>,</mo><msub><mo>⊗</mo> <mn>2</mn></msub><mo>,</mo><msub><mi>I</mi> <mn>2</mn></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(V_2, \otimes_2, I_2)</annotation></semantics></math> used for enrichment in <a class="existingWikiWord" href="/nlab/show/enriched+category+theory">enriched category theory</a> (for instance two <a class="existingWikiWord" href="/nlab/show/B%C3%A9nabou+cosmoi">Bénabou cosmoi</a>), a <a class="existingWikiWord" href="/nlab/show/lax+monoidal+functor">lax monoidal functor</a> between them</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>F</mi><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mo stretchy="false">(</mo><msub><mi>V</mi> <mn>1</mn></msub><mo>,</mo><msub><mo>⊗</mo> <mn>1</mn></msub><mo>,</mo><msub><mi>I</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mo>⟶</mo><mo stretchy="false">(</mo><msub><mi>V</mi> <mn>2</mn></msub><mo>,</mo><msub><mo>⊗</mo> <mn>2</mn></msub><mo>,</mo><msub><mi>I</mi> <mn>2</mn></msub><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
   F 
   \;\colon\;
@@ -460,7 +460,7 @@ margin-left: 0em;
 <p><strong>(<a class="existingWikiWord" href="/nlab/show/poly-morphisms">poly-morphisms</a>)</strong></p>
 
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>F</mi><mo>=</mo><mi>P</mi><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>Set</mi><mo>→</mo><mi>Set</mi></mrow><annotation encoding="application/x-tex">F =P \;\colon\; Set \to Set</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/power+set">power set</a>-<a class="existingWikiWord" href="/nlab/show/functor">functor</a>, the change of base functor <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>P</mi> <mo>*</mo></msub><mspace width="thickmathspace"></mspace><mo lspace="verythinmathspace">:</mo><mspace width="thickmathspace"></mspace><mi>Cat</mi><mo>→</mo><mi>Cat</mi></mrow><annotation encoding="application/x-tex">P_\ast \;\colon\;
- Cat \to Cat</annotation></semantics></math> sends plain <a class="existingWikiWord" href="/nlab/show/categories">categories</a> to plain categories. For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> any category, the morphisms of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>C</mi> <mi>poly</mi></msup><mo>≔</mo><mi>P</mi><mo>*</mo><mo stretchy="false">(</mo><mi>C</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">C^{poly} \coloneqq P\ast(C)</annotation></semantics></math> are called the <em><a class="existingWikiWord" href="/nlab/show/poly-morphisms">poly-morphisms</a></em> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> in <a href="poly-morphism#Mochizuki12">Mochizuki 12, section 0</a></p>
+ Cat \to Cat</annotation></semantics></math> sends plain <a class="existingWikiWord" href="/nlab/show/categories">categories</a> to plain categories. For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> any category, the morphisms of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>C</mi> <mi>poly</mi></msup><mo>≔</mo><mi>P</mi><mo>*</mo><mo stretchy="false">(</mo><mi>C</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">C^{poly} \coloneqq P\ast(C)</annotation></semantics></math> are called the <em><a class="existingWikiWord" href="/nlab/show/poly-morphisms">poly-morphisms</a></em> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> in <a href="poly-morphism#Mochizuki12">Mochizuki 12, section 0</a>.</p>
 </div>
 
 <h2 id="references">References</h2>
@@ -484,14 +484,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 22, 2018 at 04:52:59.
+  Last revised on December 22, 2018 at 05:08:22.
   See the <a href="https://ncatlab.org/nlab/history/change of enriching category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/change+of+enriching+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/change+of+enriching+category/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/change+of+enriching+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/change+of+enriching+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/change+of+enriching+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/change+of+enriching+category/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/change+of+enriching+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/change+of+enriching+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/change of enriching category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
